# audibian

./: .gitignore  Cargo.toml  Makefile  README.md  tauri.conf.json
src/: commands.rs  main.rs  matrix_config.rs  meter.rs  persistent.rs  soundboard.rs  state.rs  x11_embed.rs
src/audio/: effects.rs  eq.rs  graph.rs  mod.rs  pw_thread.rs  strip_eq.rs
src/mixer/: config.rs  mod.rs  snapshot.rs
src/profiles/: apply.rs  config.rs  mod.rs  model.rs  store.rs
src/ui/: app.rs  mod.rs  window.rs
src/ui/effects/: mod.rs  view.rs
src/ui/mixer/: mod.rs  view.rs
src/ui/patchbay/: canvas.rs  layout.rs  matrix.rs  mod.rs
src/ui/profiles/: mod.rs  view.rs
ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
ui/src/: App.css  App.jsx  index.css
ui/src/components/: Effects.jsx  Matrix.jsx  MidiChannels.jsx  Mixer.jsx  Profiles.jsx  Settings.jsx  Soundboard.jsx
