[package]
name = "audibian"
version = "0.1.0"
edition = "2021"
description = "Audio manager for Debian — patchbay, mixer, EQ and profiles over PipeWire"
license = "GPL-3.0"
homepage = "https://github.com/Markox36/audibian"
repository = "https://github.com/Markox36/audibian"
readme = "README.md"

[[bin]]
name = "audibian"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde_json = "1"

pipewire = { version = "0.8", features = ["v0_3_44"] }

serde = { version = "1", features = ["derive"] }
toml = "0.8"

log = "0.4"
env_logger = "0.11"

async-channel = "2"

[dev-dependencies]
